[gd_scene load_steps=6 format=3 uid="uid://cryvpoe0gf6fy"]

[ext_resource type="Script" uid="uid://clvk2okm7g3st" path="res://UI/HUD.gd" id="1_cyhru"]
[ext_resource type="Texture2D" uid="uid://c6pbj6sp8ps3x" path="res://Art/Dungeon Ruins Tileset/Dungeon Ruins Tileset Day.png" id="2_4n7mi"]
[ext_resource type="PackedScene" uid="uid://bahl7j3gs67je" path="res://UI/PauseMenu/PauseMenu.tscn" id="2_ijstf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uk570"]
atlas = ExtResource("2_4n7mi")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2wx0"]
atlas = ExtResource("2_4n7mi")
region = Rect2(48, 80, 16, 16)

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cyhru")

[node name="TopContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="StartHB" type="TextureRect" parent="TopContainer"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_uk570")

[node name="EndHB" type="TextureRect" parent="TopContainer"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_f2wx0")

[node name="ScoreText" type="RichTextLabel" parent="TopContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
text = "Score: 0"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
text_direction = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="CenterContainer" parent="CenterContainer"]
process_mode = 2
visible = false
layout_mode = 2

[node name="PauseMenu" parent="CenterContainer/MenuContainer" instance=ExtResource("2_ijstf")]
layout_mode = 2

[node name="GmOva" type="RichTextLabel" parent="CenterContainer"]
visible = false
clip_contents = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
bbcode_enabled = true
text = "GAME OVER"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HealthIncTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
ignore_time_scale = true
